Solved star clipping

--- a/src/app/customerPanel/feedback/feedback.component.scss
+++ b/src/app/customerPanel/feedback/feedback.component.scss
@@ -4,3 +4,6 @@ min-height:100px;
 star-rating{
     margin-top:30px;
 }
+form > div {
+    padding-top: 20px;
+}
